make it work on my ubuntu-16.04 computer as well as my macintosh
-make it only work with php 7 to keep things simple
-make it trim all whitespace from the start of the output
(might need white space one day, but it's good enough for this experiment)
-upgrade circle-ci to php7

--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,10 @@
 machine:
   python:
     version: 3.4.3
+  php:
+    version: 7.1.0
 test:
+  pre:
+    - ./build/php-7-check.sh
   post:
     - ./build/files.sh | xargs pep8
